[UPDATE] swagger and unit of getAllIngredient
